# agentic-code-reviewer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yml  notes.md  pyproject.toml
.github/workflows/: self_test.yml
prompt_templates/: code_review_prompt.jinja2  summary_prompt.jinja2
src/: __init__.py  code_review.py  issue_label_clf.py
